# DTL-Stayverz

./: .env  .env.example  .eslintrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  ghouse_prod_backup_10_03_2025.sql  makefile  note.txt  package-lock.json  package.json  pyproject.toml  redis.conf  setup.cfg  topperon.json
.github/workflows/: cd.yml
app/: layout.tsx  page-old.tsx
app/blog/: layout.tsx  page.tsx
app/host-dashboard/: page.tsx
app/messages/: layout.tsx  page.tsx
app/privacy-policy/: layout.tsx  page.tsx
app/profile/: layout.tsx
app/refund-policy/: page.tsx
app/room-list/: page.tsx
app/rooms/: layout.tsx
app/temp/: page.tsx
app/trips/: layout.tsx  page.tsx
app/user/: layout.tsx
app/wishlists/: page.tsx
cd/: nginx.conf
components/Images/: Guest.tsx  GuestActive.tsx  GuestHouse.tsx  Hotel.tsx
components/auth/: ProtectedView.tsx
components/card/: Card.tsx  ReservationCard.tsx
components/form/: types.ts
components/icons/: LoadingIcon.tsx
components/layout/: ListingDropdownToggler.tsx  MobileNavbar.tsx  NavbarAlt.tsx  ResponsiveHostNavbar.tsx  ResponsiveNavbar.tsx
components/modal/: Modal.tsx
components/navbar/: DropdownToggler.tsx  HostNavMenu.tsx  HostNavbar.tsx
components/table/: Table.tsx
constants/forms/: inputVariants.ts
contexts/: InitializerContext.tsx  Providers.tsx
guest-house-frontend/: .eslintrc.json  middleware.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json
guest-house-frontend/app/: page.tsx
guest-house-frontend/constants/: format.ts  localstorage.ts
guest-house-frontend/hooks/: useViewportSize.tsx  useWindowSize.tsx
guest-house-frontend/middleware/: authorize.ts
guest-house-frontend/store/: appStore.ts  authStore.ts  useListingSearchStore.ts
hooks/: useDetectKeyPress.ts  useDetectOutsideClick.ts  useMounted.tsx
lib/api/: apiClient.ts  types.ts  (+2 more)
public/: index.html  manifest.json
queries/: types.ts
src/: App.tsx  config-global.ts  consumer.py  main.py  manage.py  routers.py  server.py
styles/: about.css  animation.css  classes.js  index.css  price-range-slider.css  swiper.css  toast.css
(+836 files in other folders)
