[tool.poetry]
name = "chat-service"
version = "0.1.0"
description = "Chat application for guest house project"
authors = ["MahmudulHassan5809 <mahmudul.hassan240@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
pydantic-settings = "^2.0.3"
celery = "^5.3.4"
redis = "^5.0.1"
pydantic = {extras = ["email"], version = "^2.4.2"}
motor = "^3.3.1"
beanie = "^1.22.6"
pyjwt = "^2.8.0"
python-json-logger = "^2.0.7"
websockets = "^11.0.3"
jinja2 = "^3.1.2"
asyncio-redis = "^0.16.0"
pika = "^1.3.2"
aio-pika = "^9.3.0"
pytz = "^2023.3.post1"
firebase-admin = "^6.5.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.9.1"
mypy = "^1.5.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
